# g4-bulk-sequence-killer

./: LICENSE  Makefile  g4.xlsx  mypy.ini  pylintrc  pyproject.toml
src/: main.py  sequence.py
src/helpers/: complement.py
tests/: test_g4_bulk_sequence_killer.py  test_sequence.py
